force-app/main/default/objects/Send_Email__c/Send_Email__c.object-meta.xml
<CustomObject>
    <label>Send Email</label>
    <nameField>
        <displayFormat>EN-{000000}</displayFormat>
        <label>Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>