force-app/main/default/objects/Send_Email__c/fields/Sendgrid_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Sendgrid_Template_Id__c</fullName>
    <label>Sendgrid Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>