force-app/main/default/objects/Send_Email__c/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <label>SObject API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>