force-app/main/default/objects/Send_Email__c/fields/SObject_Id__c.field-meta.xml
<CustomField>
    <fullName>SObject_Id__c</fullName>
    <label>SObject Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>